--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <body>
     <div id="app"></div>
-    <p>test</p>
-    console.log("aaaaaa")
+    <p>修正しました</p>
+
     <script src="src/index.js"></script>
   </body>
 </html>
